[gd_scene load_steps=12 format=3 uid="uid://csd60skph3ot6"]

[ext_resource type="Script" uid="uid://c56llad3k2ns6" path="res://scripts/room_elements/door/door_locked.gd" id="1_idsxc"]
[ext_resource type="Texture2D" uid="uid://c2shryi0nxmku" path="res://art/room_elements/Doors.png" id="1_nfad1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_idsxc"]
atlas = ExtResource("1_nfad1")
region = Rect2(0, 80, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y4km"]
atlas = ExtResource("1_nfad1")
region = Rect2(128, 80, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5fay"]
atlas = ExtResource("1_nfad1")
region = Rect2(64, 80, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rjc6"]
atlas = ExtResource("1_nfad1")
region = Rect2(0, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wb1t2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_idsxc")
}],
"loop": true,
"name": &"locked",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y4km")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5fay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idsxc")
}],
"loop": false,
"name": &"locking",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rjc6")
}],
"loop": true,
"name": &"opened",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_idsxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5fay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y4km")
}],
"loop": false,
"name": &"opening",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k513b"]
size = Vector2(24, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfad1"]
size = Vector2(13.5, 31.9375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idsxc"]
size = Vector2(20, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5fay"]
size = Vector2(20, 5)

[node name="DoorLocked" type="StaticBody2D"]
y_sort_enabled = true
script = ExtResource("1_idsxc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wb1t2")
animation = &"opened"

[node name="EnterBlocker" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_k513b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-16.75, -0.0625)
scale = Vector2(1.1, 1)
shape = SubResource("RectangleShape2D_nfad1")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2(16.75, -0.0625)
scale = Vector2(1.1, 1)
shape = SubResource("RectangleShape2D_nfad1")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(2.24, 0.5)
shape = SubResource("RectangleShape2D_nfad1")

[node name="NextRoomTrigger" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextRoomTrigger"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_idsxc")

[node name="InteractTrigger" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractTrigger"]
position = Vector2(0, 18)
shape = SubResource("RectangleShape2D_d5fay")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="NextRoomTrigger" to="." method="_on_next_room_trigger_body_entered"]
[connection signal="body_entered" from="InteractTrigger" to="." method="_on_interact_trigger_body_entered"]
[connection signal="body_exited" from="InteractTrigger" to="." method="_on_interact_trigger_body_exited"]
